tests/NormalTests/paczka2/big_fuzzy/79299832.err
Error in line 27: oZUGb1f A713 321,26
Error in line 30: EMsI1rFSY3p S845 28,1
Error in line 38: 5mbLQ5rNc S317 11,5
Error in line 50: oZUGb1f A859 69,8
Error in line 39: 5mbLQ5rNc A713 36,2
Error in line 56: oZUGb1f S845 63,4
Error in line 76: 5mbLQ5rNc S845 62,0
Error in line 70: Nr5w A713 92,3
Error in line 90: oZUGb1f S317 64,9
Error in line 92: oZUGb1f A713 4,1
Error in line 105: S317 S845 62,4
Error in line 93: oZUGb1f S317 97,0
Error in line 121: oZUGb1f A859 91,3
Error in line 116: Nr5w A859 49,5
Error in line 125: 5mbLQ5rNc A713 88,9
Error in line 134: oZUGb1f A859 -2,2
Error in line 117: S317 A859 84,0
Error in line 128: oZUGb1f A859 44,6
Error in line 152: Nr5w A859 28,6
Error in line 155: EMsI1rFSY3p S317 49,0
Error in line 156: EMsI1rFSY3p S845 89,5
Error in line 165: EMsI1rFSY3p A713 20,7
Error in line 167: EMsI1rFSY3p S317 0,6
Error in line 169: EMsI1rFSY3p S845 7,0
Error in line 176: EMsI1rFSY3p A859 35,10
Error in line 187: S317 S317 40,5
Error in line 181: EMsI1rFSY3p S845 37,3
Error in line 193: oZUGb1f S317 88,6
Error in line 203: EMsI1rFSY3p A859 0,7
Error in line 214: oZUGb1f S845 90,7
Error in line 220: Nr5w S317 32,2
Error in line 228: oZUGb1fA85939,0
Error in line 142: AKtHvo A713 2,7
Error in line 221: Nr5w A713 25,5
Error in line 234: Nr5w S317 80,5
Error in line 239: AKtHvo A713 52,8
